# HeartDisease_PredictionModel

./: README.md  analysis_report.txt  dvc.yaml  main.py  pyproject.toml
api/: main.py  model_loader.py  predict.py  schema.py
api/static/: style.css
api/templates/: index.html
artifacts/metrics/: .gitignore
artifacts/models/: pipeline.pkl
deployment/: training_pipeline.py
mlruns/0/: meta.yaml
mlruns/544073101510172209/: meta.yaml
mlruns/544073101510172209/aac291fc034140aa9b9785a0c56597c9/: meta.yaml
mlruns/544073101510172209/aac291fc034140aa9b9785a0c56597c9/artifacts/: model.pkl
mlruns/544073101510172209/aac291fc034140aa9b9785a0c56597c9/metrics/: cv_accuracy
mlruns/544073101510172209/aac291fc034140aa9b9785a0c56597c9/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/544073101510172209/ddc02dd60579440a9f9fec455e7ddc75/: meta.yaml
mlruns/544073101510172209/ddc02dd60579440a9f9fec455e7ddc75/artifacts/: model.pkl
mlruns/544073101510172209/ddc02dd60579440a9f9fec455e7ddc75/metrics/: cv_accuracy
mlruns/544073101510172209/ddc02dd60579440a9f9fec455e7ddc75/tags/: mlflow.runName  mlflow.source.name
src/: data_ingestion.py  logger.py  model_builder.py  preprocessing.py
tests/: test_pipeline.py
