[project]
name = "heartdisease-predictionmodel"
version = "1.0.0"
authors = [{ name = "Chandan Chaudhari", email = "chaudhari.chandan22@gmail.com" }]
description = "Description of project already provided in README.md"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "mlflow>=3.8.1",
    "numpy>=2.4.1",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "uvicorn>=0.40.0",
]
